--- a/index.html
+++ b/index.html
@@ -310,13 +310,13 @@
                 Mulheres e crianças estavam entre os mortos de um ataque atingiu seu comboio que fugia do norte de Gaza em uma das duas rotas de evacuação.<br> 
                 O Ministério de Saúde Palestino, que afirmou que houve 70 vítimas, culpou Israel pelo ataque; o governo israelense disse estar investigando o ocorrido.<br> 
                 O norte de Gaza — que inclui a Cidade de Gaza e dois campos de refugiados — é uma das partes mais densamente povoadas do território.<br>
-                Há apenas duas estradas até a zona de evacuação, e o combustível para veículos está acabando. A ala militar do Hamas, as Brigadas al-Qassam, continua a disparar foguetes contra Israel.<br>
+                Há apenas duas estradas até a zona de evacuação, e o combustível para veículos está acabando. A ala militar do Hamas, as Brigadas al-Qassam, continua a disparar foguetes contra Israel.<br><br>
                 <strong>Como Israel poderia realizar uma ofensiva terrestre?</strong><br>
                 O objetivo declarado de Israel é destruir o Hamas.<br> O governo israelense deslocou dezenas de milhares de soldados para sua fronteira com Gaza, juntamente com tanques e artilharia.<br> Além de sua força permanente, de 160 mil militares, foram chamados cerca de 300.000 reservistas. O Exército israelense se preparou para uma ofensiva lançando 6.000 bombas em Gaza, visando comandantes do Hamas e seus centros de controle.<br> Um de seus principais alvos é o vasto labirinto de túneis subterrâneos do Hamas, que ligam seus postos de comando subterrâneos.<br> "Pense na Faixa de Gaza como uma camada para os civis e depois outra camada para o Hamas. Estamos tentando chegar à segunda camada que o Hamas construiu", disse um porta-voz das Forças de Defesa de Israel (IDF) na quinta-feira (12/10).<br> O Hamas já disse que os túneis se estendem por 500 km, uma extensão superior ao metrô de Londres, por exemplo.<br>
                 Muitos têm entradas escondidas dentro de casas, mesquitas, escolas e outros edifícios públicos.<br>
                 Os militares de Israel provavelmente evitarão entrar em túneis, a menos que seja necessário, em vez disso, usando explosivos para destruí-los.<br> 
                 Acredita-se que o Hamas tenha colocado armadilhas e explosivos improvisados nos pontos de entrada e ao longo de ruas estreitas.<br> 
-                Um grande desafio para Israel serão os combates em áreas urbanas densamente povoadas. Israel acredita que o Hamas tenha cerca de 30.000 soldados, com armas incluindo fuzis automáticos, granadas impulsionadas por foguetes e mísseis antitanque.<br> 
+                Um grande desafio para Israel serão os combates em áreas urbanas densamente povoadas. Israel acredita que o Hamas tenha cerca de 30.000 soldados, com armas incluindo fuzis automáticos, granadas impulsionadas por foguetes e mísseis antitanque.<br><br> 
                 <strong>O que é o Hamas e o que ele quer?</strong><br> 
                 Hamas quer destruir Israel<br>
                 O Hamas é um grupo palestino que governa a Faixa de Gaza desde 2007.<br>
@@ -325,7 +325,7 @@
                 Em resposta, Israel atacou repetidamente o Hamas com ataques aéreos e enviou tropas para Gaza durante duas das guerras. Junto com o Egito, bloqueia a Faixa de Gaza desde 2007 pelo que descreve como razões de segurança.<br>
                 O Hamas — ou, em alguns casos, a sua ala militar, as Brigadas Izzedine al-Qassam — foi designado grupo terrorista por Israel, Estados Unidos, União Europeia e Reino Unido, bem como outras potências.<br>
                 Já o Brasil e nações como China, Rússia, Turquia, Irã e Noruega não adotam essa classificação. Historicamente, o governo brasileiro só classifica uma organização como sendo terrorista se ela for considerada assim pela Organização das Nações Unidas (ONU).<br>
-                O Irã apoia o grupo, fornecendo-lhe financiamento, armas e treinamento.<br>
+                O Irã apoia o grupo, fornecendo-lhe financiamento, armas e treinamento.<br><br>
                 <strong>O que é a Faixa de Gaza e por que ela é importante? </strong><br>
                 <img src="Atualidades/att2.jpg" class="atualimagem">
                 Gaza é o lar de cerca de 2,2 milhões de pessoas e tem uma das maiores densidades populacionais do mundo A Faixa de Gaza é um território de 41 km de comprimento e 10 km de largura localizado entre Israel, Egito e o Mar Mediterrâneo.<br>
@@ -333,24 +333,24 @@
                 Gaza é o lar de cerca de 2,2 milhões de pessoas.<br>
                 Pouco mais de 75% da população do território — cerca de 1,7 milhões de pessoas — são refugiados, segundo a ONU. Mais de 500 mil deles vivem em oito acampamentos lotados localizados na Faixa de Gaza.<br>
                 Israel controla o espaço aéreo sobre Gaza e a sua costa, e restringe rigorosamente o movimento de pessoas e mercadorias através das suas passagens fronteiriças.<br>
-                Da mesma forma, o Egito controla quem entra e sai através da sua fronteira com Gaza.<br>
+                Da mesma forma, o Egito controla quem entra e sai através da sua fronteira com Gaza.<br><br>
                 <strong>O que é o 'cerco' a Gaza?</strong><br>
                 Após o ataque do Hamas, Israel anunciou um "cerco" a Gaza — cortando o fornecimento de eletricidade, combustível, alimentos, bens e água ao território.<br>
                 Segundo o governo israelense, o cerco não terminará até que os 126 reféns sejam libertados. As famílias, os hospitais e as empresas em Gaza dependem de geradores — se tiverem acesso a combustível para fazê-los funcionar.<br>
-                A fronteira entre Israel e Gaza permanece fechada. A passagem de Rafah, que é controlada pelo Egito, tem sido alvo de ataques aéreos israelenses.<br>
+                A fronteira entre Israel e Gaza permanece fechada. A passagem de Rafah, que é controlada pelo Egito, tem sido alvo de ataques aéreos israelenses.<br><br>
                 <strong>O que é a Palestina?</strong><br>
                 Cisjordânia e Gaza, conhecidas como "territórios palestinos", bem como Jerusalém Oriental e Israel, fizeram parte de uma terra conhecida como Palestina desde a época romana até meados do século 20.<br>
                 Estas também eram as terras dos reinos judaicos na Bíblia e são vistas por muitos judeus como sua antiga pátria.<br>
                 Israel foi declarado Estado em 1948, embora a terra ainda seja referida como Palestina por aqueles que não reconhecem o direito de existência de Israel. Os palestinos também usam o nome Palestina como um termo genérico para Cisjordânia, Gaza e Jerusalém Oriental.<br>
                 O presidente da Autoridade Palestina (AP) é Mahmoud Abbas, também conhecido como Abu Mazen. Ele despacha da Cisjordânia ocupada por Israel.<br>
-                Abbas representa o partido político Fatah, que tem uma rivalidade acirrada com o Hamas.<br>
+                Abbas representa o partido político Fatah, que tem uma rivalidade acirrada com o Hamas.<br><br>
                 <strong>Por que o Hamas lançou o seu último ataque?</strong><br>
                 Embora o ataque do Hamas de 7 de outubro tenha sido inesperado, ocorreu num momento de crescentes tensões entre Israel e palestinos.<br>
                 Este ano foi o mais mortífero já registrado para os palestinianos que vivem na Cisjordânia ocupada por Israel, o que poderia ter motivado o Hamas a atacar Israel.<br>
                 O grupo extremista palestino também pode ter procurado obter uma vitória de propaganda significativa para aumentar a sua popularidade.<br>
                 Acredita-se que a captura de reféns israelenses visa pressionar Israel a libertar alguns dos cerca de 4.500 palestinos detidos em prisões israelenses — uma questão altamente emotiva para todos os palestinos.<br>
                 Há também especulações de que o ataque foi orquestrado pelo Irã — o arqui-inimigo de Israel — embora o líder supremo iraniano, Ali Khamenei, tenha negado o envolvimento do seu país. O Irã e o Hamas também se opõem firmemente à perspectiva crescente de um acordo de paz histórico entre Israel e a Arábia Saudita.<br>
-                Isto poderá ser frustrado se a resposta militar de Israel aos ataques do Hamas provocar uma ira generalizada no mundo árabe.<br>
+                Isto poderá ser frustrado se a resposta militar de Israel aos ataques do Hamas provocar uma ira generalizada no mundo árabe.<br><br>
                 <strong>Como isso se compara aos ataques anteriores do Hamas?</strong><br>
                 O editor internacional da BBC, Jeremy Bowen, diz que esta é a operação mais ambiciosa que o Hamas já lançou a partir de Gaza e o mais grave ataque transfronteiriço que Israel enfrentou em mais de uma geração. Os militantes romperam a cerca de arame farpado que separa Gaza de Israel em vários lugares.<br>
                 Surgiram detalhes de um massacre numa comunidade israelense, o kibutz Kfar Aza — com um general israelense falando de bebês assassinados. Soldados israelenses disseram a Jeremy Bowen que alguns dos mortos haviam sido decapitados.<br>
