--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <li><strong>Quarta 16/04:</strong> Seminário de Dom Casmurro</li>
                 <li><strong>Segunda 16/04:</strong> Seminário de Sociologia</li>
                 <li><strong>Sexta 16/04:</strong> Seminário de Oficina de Produção Textual</li>
-                <li><strong>Segunda 26/05:</strong> Seminário de Sociologia</li>
+                <li><strong>Segunda 26/05:</strong> Entrega do relatóriode física</li>
             </ul>
         </div>
         <div class="trblpendente">
