Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
                 <li><strong>Segunda 16/04:</strong> Seminário de Sociologia</li>
                 <li><strong>Sexta 16/04:</strong> Seminário de Oficina de Produção Textual</li>
                 <li><strong>Segunda 26/05:</strong> Entrega do relatóriode física</li>
+                <li><strong>Segunda 26/05:</strong> Entrega dos eletróscopios</li>
             </ul>
         </div>
         <div class="trblpendente">
