Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -234,9 +234,8 @@
         <div class="trblpendente">
             <h3>Formação Geral Básica</h3>
             <ul>
-                <li><strong>Quarta 16/04:</strong> Seminário de Dom Casmurro</li>
-                <li><strong>Segunda 16/04:</strong> Seminário de Sociologia</li>
-                <li><strong>Sexta 16/04:</strong> Seminário de Oficina de Produção Textual</li>
+                <li><strong>Quarta 23/04:</strong> Seminário de Dom Casmurro</li>
+                <li><strong>Quarta 24/04:</strong> Seminário de Sociologia</li>
                 <li><strong>Segunda 26/05:</strong> Entrega do relatóriode física</li>
                 <li><strong>Segunda 26/05:</strong> Entrega dos eletróscopios</li>
             </ul>
@@ -244,7 +243,7 @@
         <div class="trblpendente">
             <h3>Intinerário Exatas</h3>
             <ul>
-                <li><strong>Segunda 14/04:</strong> Entrega dos cálculos de Cidade em movimento.</li>
+                <li><strong>Terça 22/04:</strong> Visto na pesquisa de Cosmos: Micro Macro</li>
             </ul>
         </div>
         <div class="trblpendente">
