Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -378,6 +378,9 @@
         <label for="newsFilter">Filtrar:</label>
         <input type="date" id="newsFilter" onchange="filterNews()">
         <hr>
+        <div class="noticia" data-date="2025-03-11">
+            <h3>Congresso com tema ecológico!</h3>
+            <p>Durante a aula de Projeto de Vida foi realizado um congresso no auditório, tendo o 1°b como plateia. O congressosfoi realizado entre diferentes cidades, sendo elas: Salvador, Aracaju, Feira de santana, Fortaleza e Maringá. O congresso teve como foco o tema da Campanha da Fraternidade de 2025, (Fraternidade e Ecologia Integral).</p>
         <div class="noticia" data-date="2025-03-17">
             <h3>Vencemos as eleições!!!</h3>
             <p>Logo após o intervalo do ensino médio, ocorreu o anúncio de quem venceu as eleições de sala, e no nosso segundão os vencedores foram Eri e Giulia! Que essa vitória nos abra muitas portas no futuro.</p>
