--- a/index.html
+++ b/index.html
@@ -381,6 +381,7 @@
         <div class="noticia" data-date="2025-03-11">
             <h3>Congresso com tema ecológico!</h3>
             <p>Durante a aula de Projeto de Vida foi realizado um congresso no auditório, tendo o 1°b como plateia. O congressosfoi realizado entre diferentes cidades, sendo elas: Salvador, Aracaju, Feira de santana, Fortaleza e Maringá. O congresso teve como foco o tema da Campanha da Fraternidade de 2025, (Fraternidade e Ecologia Integral).</p>
+            <p><strong>Data:</strong> 11/04</p>
         </div>
         <div class="noticia" data-date="2025-03-17">
             <h3>Vencemos as eleições!!!</h3>
