Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -266,9 +266,11 @@
         <hr>
         <div class="assprova">
             <h3>Inglês (26/04)</h3>
-            <p><strong>Prova padrão:</strong></p>
+            <p><strong>Prova padrão e adaptada:</strong></p>
             <ul>
-                <li>Ainda não temos acesso ao assunto da prova de inglês</li>
+                <li>Interpretação de texto</li>
+                <li>Livro 10, capítulo 30, Determining words meanings through affixes and roots, páginas 223</li>
+                <li>Recomendação do professor: Estidar pelas atividades do caderno</li>
             </ul>
         </div>
     </div>
