Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -241,7 +241,8 @@
         <div class="trblpendente">
             <h3>Intinerário Exatas</h3>
             <ul>
-                
+                <li><strong>Terça 06/05:</strong> Materias do ciclo trigonométrico</li>
+                <li><strong>Terça 06/05:</strong> Tabela de protozooses</li>
             </ul>
         </div>
         <div class="trblpendente">
