--- a/index.html
+++ b/index.html
@@ -256,20 +256,25 @@
         <button class="close-btn" onclick="closeSection('provas')">X</button>
         <h2>Assuntos das Provas</h2>
         <div class="assprova">
-            <h3>Matemática (26/04)</h3>
-            <p><strong>Prova padrão e adaptada:</strong></p>
+            <h3>Física (10/05)</h3>
+            <p><strong>Prova padrão:</strong></p>
             <ul>
-                <li>Números complexos, Razões trigonométricas e Relações trigonométricas</li>
+                <li>Livro 11 e 12 Formação Geral Básica, capítulo 15 e 16, Eletrostática (parte 1 e 2)</li>
+                <li>Livro 12 Intinerário Informativo, capítulo 13, Eletrostática (parte 1), páginas 28 a 34 e 40 a 41</li>
+            <p><strong>Prova adaptada:</strong></p>
+            <ul>
+                <li>Livro 11 e 12 Formação Geral Básica, capítulo 15 e 16, Eletrostática (parte 1 e 2)</li>
+                <li>Eletrização, lei de coulomb, campo elétrico</li>
+           <p><strong>Estudar pelo caderno e pela leitura sa parte teórica no livro></p>
             </ul>
         </div>
         <hr>
         <div class="assprova">
-            <h3>Inglês (26/04)</h3>
+            <h3>Português (10/05)</h3>
             <p><strong>Prova padrão e adaptada:</strong></p>
             <ul>
                 <li>Interpretação de texto</li>
-                <li>Livro 10, capítulo 30, Determining words meanings through affixes and roots, páginas 223</li>
-                <li>Recomendação do professor: Estidar pelas atividades do caderno</li>
+                <li>Livro 10, capítulo 24, Do Trovadorismo ao Naturalismo, páginas 153 a 162</li>
             </ul>
         </div>
     </div>
