Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -266,15 +266,14 @@
             <ul>
                 <li>Livro 11 e 12 Formação Geral Básica, capítulo 15 e 16, Eletrostática (parte 1 e 2)</li>
                 <li>Eletrização, lei de coulomb, campo elétrico</li>
-           <p><strong>Estudar pelo caderno e pela leitura sa parte teórica no livro></p>
             </ul>
+           <p><strong>Estudar pelo caderno e pela leitura sa parte teórica no livro</strong></p>
         </div>
         <hr>
         <div class="assprova">
             <h3>Português (10/05)</h3>
             <p><strong>Prova padrão e adaptada:</strong></p>
             <ul>
-                <li>Interpretação de texto</li>
                 <li>Livro 10, capítulo 24, Do Trovadorismo ao Naturalismo, páginas 153 a 162</li>
             </ul>
         </div>
