--- a/index.html
+++ b/index.html
@@ -282,64 +282,67 @@
         <button class="close-btn" onclick="closeSection('atualidades')">X</button>
         <h2>Texto de Atualidades</h2>
         <div class="attlidades">
-            <h2>Lobo-terrível pode voltar à natureza? Veja os dilemas ecológicos da espécie 'desextinta'</h2>
+            <h2>Modalidade EAD amplia acesso ao ensino superior</h2>
+            <h3>Expansão veio acompanhada de novos desafios, principalmente relacionados à qualidade dos cursos ofertados</h3>
             
-            <p>Uma empresa dos Estados Unidos diz ter trazido de volta o lendário lobo--terrível, extinto há mais de 10 mil anos. Mas especialistas perguntam: como seria a interação desses animais com a fauna dos dias de hoje? A pesquisa é uma saída para a extinção de espécies? E eles são realmente lobos-terríveis ou apenas lobos-cinzentos geneticamente modificados?<br><br>
-
-➡️ A empresa de bioengenharia Colossal revelou ao mundo dois lobinhos que, aos seis meses, já pesam quase 40 quilos e a irmãzinha, de 3 meses. O anúncio despertou um show de fofura e controvérsia.<br><br>
-
-<h3>🌳 Dilemas do equilíbrio ecológico</h3><br>
-Havia 10 mil anos, o lobo-gigante caçava presas da megafauna: preguiças gigantes, cavalos selvagens, mastodontes. Ele ainda teria um papel ecológico?<br><br>
-
-"Ele não foi caçado até a extinção. Ele se extinguiu porque nós caçamos as presas dele até a extinção", diz o ecólogo Fernando Fernandez, professor da Universidade Federal do Rio de Janeiro (UFRJ). "Que sentido faria você colocar de novo um animal em um sistema em que não existe mais nenhuma das presas que ele é adaptado a caçar?", questiona.<br><br>
-
-<strong>O ecólogo teme que se crie a ilusão de que podemos reverter no futuro um processo que está em curso: a extinção de milhares de espécies, pela destruição do habitat e o aquecimento do planeta.</strong><br><br>
-
-"As espécies estão se extinguindo diariamente. Muitas delas menos carismáticas que um lobo-terrível", diz Fernandez.<br><br>
-
-A edição genética pode ajudar a salvar algumas espécies que estão à beira da extinção, como o lobo-vermelho. Menos de 20 indivíduos sobrevivem na região da Carolina do Norte, nos EUA.<br><br>
-
-Cientistas agora descobriram que o lobo-fantasma carrega genes do lobo-vermelho. Quatro clones foram feitos pela mesma equipe e estão crescendo numa área fechada, assim como os primos terríveis. Um dia, eles poderão reforçar a genética do grupo ameaçado.<br><br>
-
-Os lobos-terríveis não devem ser soltos na natureza. "Ao colocar um animal desse em um ecossistema completamente diferente, pode-se gerar interações indesejadas", explica o ecólogo.<br><br>
-
-🐸 Um exemplo disso é o sapo cururu. Há quase 100 anos, ele foi levado para a Austrália para controlar uma praga, o besouro da cana, e se reproduziu aos milhões. Mas está levando à extinção o quoll, um pequeno marsupial que se alimenta do sapo e morre.<br><br>
-
-A Colossal trabalha com os australianos para introduzir no quoll a resistência ao veneno do sapo cururu – nos predadores aqui do Brasil, isso foi desenvolvido em milhares de anos.<br><br>
-
-<h3>🧬 Como foi a pesquisa</h3><br>
-Os genes do lobo-terrível foram mapeados a partir de fósseis de 13 mil e 72 mil anos atrás. Depois, os cientistas compararam com os genes do lobo-cinzento, um animal que vive na América do Norte. 99,5% das características são iguais. Assim, identificaram os genes que fazem o lobo-terrível.<br><br>
-
-"Nós temos 500 vezes mais DNA de lobos-terríveis que qualquer outra pesquisa. Foi assim que concluímos que as duas variantes separadas por 60 mil anos eram brancas", afirmou Ben Lamm, fundador da Colossal.<br><br>
-
-Os cientistas editaram o DNA do lobo-cinzento usando uma técnica chamada CRISPR, como quem reescreve um texto trocando palavras. Mas não trocaram o meio por cento que faz a diferença entre as espécies, o que daria milhões de mudanças. Foram 20 edições em 14 genes.<br><br>
-
-<strong>"Nosso objetivo é ter um animal saudável, fazendo o mínimo possível de edições. Focamos em características-chave, como tamanho, musculatura e cor dos pelos", explicou a pesquisadora-chefe do projeto, Beth Shapiro.
-O DNA alterado foi colocado em embriões, que foram gestados por fêmeas de cachorro doméstico. O resultado? Filhotes fortes, de pelos brancos, parecidos com os fósseis estudados.</strong><br><br>
-
-Em outubro do ano passado, nasceram os dois primeiros filhotes: Rômulo e Remo. Matt James, responsável pelo bem-estar dos animais, conversou com o Fantástico.<br><br>
-
-<strong>"Quando Rômulo nasceu e vimos aquele branco brilhante... esse é o momento em que você pensa 'caramba, está acontecendo'", disse James.<br>
-Duas semanas depois, ouviu-se o que seria o primeiro uivo em 10 mil anos. James contou: "Um veterinário começou a cantar e os dois começaram a uivar. Foi um momento insano."</strong><br><br>
-
-Rômulo e Remo estão num recinto de 8 quilômetros quadrados, num local mantido em segredo.<br><br>
-
-Há três meses nasceu uma fêmea: Khalese. Ela deve se juntar aos dois em breve. James comenta: "Ela ainda é muito pequena, mas já se mostra mandona. Acho que vai acabar sendo a chefe."<br><br>
-<img src="Atualidades/att15.jpg" class="atualimagem">
-<h3>🔬 Os lobos-terríveis foram mesmo 'desextintos'?</h3><br>
-🐺 Com 20 edições genéticas, os filhotes são lobos-cinzentos geneticamente modificados.<br><br>
-
-A Colossal publicou o sequenciamento genético dos fósseis, ainda em preprint. Isso significa que a revisão por pares não foi feita, mas está aberta à comunidade científica.<br><br>
-
-Um dos autores do texto é George R. R. Martin, escritor dos livros que levaram à série "Game of Thrones". Ele também é investidor e consultor da Colossal.<br><br>
-
-A empresa foi fundada há 4 anos com a promessa de "desextinguir" o mamute. Para isso, repetiriam o processo feito com os lobos, usando o elefante asiático. Alguns genes dos fósseis de mamute já foram testados, resultando em um rato lanoso.<br><br>
-
-Ben Lamm acredita que até o final de 2026 terão embriões de mamute. "Essas tecnologias são complexas, mas estamos mostrando como podemos remontar DNA antigo, fazer a genômica comparativa e editá-lo rapidamente."<br><br>
-
-O valor da Colossal ultrapassa US$ 10 bilhões no mercado, porque os avanços podem ser aplicados em várias áreas, como genotransplantes. O que gerou otimismo foi a edição de vários genes ao mesmo tempo.<br><br>
-
-"Existe toda uma ideia de que, no futuro próximo, a gente possa alterar vários genes ao mesmo tempo que são responsáveis por doenças que a gente chama de complexas ou multifatoriais, que dependem de muitos genes e interação com o ambiente", diz a bióloga molecular Mayana Zatz, referência no estudo de genética no Brasil.
+            <p>Ao analisar o momento atual da educação básica brasileira, percebe-se que há importantes desafios
+estruturais que exigem respostas urgentes e articuladas. No ensino superior, a paisagem é um pouco
+diferente.<br>
+Quem procura uma faculdade, encontra diversas opções, tanto na esfera pública quanto na privada.
+O acesso foi ampliado nas últimas décadas, impulsionado por políticas públicas como o Fies e o
+Prouni, que democratizaram o ingresso nas universidades.<br>
+"De fato, houve ampliação do acesso ao ensino superior. A modalidade EAD ajudou a levar o
+ensino superior a uma grande parte da população, seja por causa dos custos, porque a EAD é mais
+barata, seja porque permitia conciliar a educação com o trabalho", diz Cesar Callegari, sociólogo e
+presidente do Conselho Nacional de Educação.<br>
+<img src="Atualidades/att1.jpg" class="atualimagem">
+No entanto, a expansão veio acompanhada de novos desafios, principalmente relacionados à
+qualidade dos cursos ofertados.<br>
+"Infelizmente, diversos cursos oferecidos por instituições particulares não têm a qualidade
+necessária. Os alunos percebem isso, o que gera a evasão escolar, porque eles acham que o curso
+não proporciona instrumentos para que o estudante possa participar e fetivamente do mercado de
+trabalho", alerta Callegari.<br>
+Outro problema, para ele, é a formação de professores para a educação básica. A situação, diz, é a
+de um verdadeiro "apagão do magistério".<br>
+"Temos uma escassez brava em licenciaturas de matemática, química, física, geografia… Não
+temos professores suficientes. Tudo isso degrada a qualidade da educação oferecida", afirma.<br>
+Para Callegari, a valorização docente teria de ser encarada como um objetivo estratégico para o
+futuro do país. "O Brasil precisa fazer dois movimentos fundamentais na área da educação: o
+primeiro é valorizar os milhões de professores que militam na educaç ão básica. Precisam ser
+valorizados do ponto de vista do salário e da estrutura para que possam trabalhar. Além disso, temos
+de formar uma nova geração de professores no Brasil. Com cursos em período integral, bolsas de
+permanência, para que possam se dedicar exclusivamente à sua formação, e, depois, ingressar em
+uma carreira atrativa."<br>
+Já no ensino básico, uma vitória do país foi a implementação da Base Nacional Comum Curricular
+(BNCC), em 2017, segundo Beatriz Alquéres, gerente-executiva de advocacy do Instituto Ayrton
+Senna.<br>
+"Temos o dever de garantir o mínimo comum de aprendizado entre todas as regiões. É um direito
+de todas as crianças do país aprender um mínimo de matemática, de língua portuguesa ou de
+ciências", afirma.<br>
+Apesar dos avanços, persistem desigualdades regionais e sociais. Segundo Alquéres, essas
+desigualdades podem ser observadas em diferentes aspectos, tanto no resultado de aprendizagem
+(ao final do ensino médio), como na questão da trajetória escolar (nas ta xas de reprovação e de
+abandono escolar).<br>
+Além de olhar para a desigualdade entre os estados, é necessário apontar a vista para a desigualdade
+entre escolas de uma mesma cidade. "Há desigualdade até mesmo dentro de uma mesma escola",
+alerta Alquéres.<br>
+O Todos Pela Educação, por meio de seu departamento de comunicação, avalia que a desigualdade
+que historicamente persiste no país se reflete diretamente na educação.<br>
+Segundo o instituto, estudantes negros, indígenas e de baixa renda enfrentam contextos escolares
+mais desafiadores, em escolas que ainda carecem de investimentos estruturais e pedagógicos
+consistentes. As desigualdades étnico-raciais, em especial, têm impacto direto nos índices de
+permanência e conclusão escolar: jovens negros têm, em média, uma década de atraso no acesso
+ao ensino médio em comparação aos brancos. Essa desigualdade não é fruto de menor capacidade,
+mas da ausência histórica de políticas educacionais comprometidas com a equidade racial.
+A instituição destaca uma lista de desafios para que a qualidade da educação no Brasil continue
+avançando.<br>
+Entre esses desafios estão: enfrentar essas desigualdades de forma sistêmica e assegurar que a
+equidade étnico-racial esteja no centro das políticas públicas; investir na primeira infância;
+implementar uma política de alfabetização efetiva, garantindo que todas as crianças aprendam a ler
+e a escrever na idade certa; qualificar a formação inicial e continuada de professores; fortalecer a
+governança educacional, com melhor articulação entre União, estados e municípios; e expandir a
+escola em tempo integral, uma das formas mais eficazes de reduzir desigualdades e melhorar os
+resultados de aprendizagem.
             </p>
         </div>
     </div>
