--- a/index.html
+++ b/index.html
@@ -282,67 +282,28 @@
         <button class="close-btn" onclick="closeSection('atualidades')">X</button>
         <h2>Texto de Atualidades</h2>
         <div class="attlidades">
-            <h2>Modalidade EAD amplia acesso ao ensino superior</h2>
-            <h3>Expansão veio acompanhada de novos desafios, principalmente relacionados à qualidade dos cursos ofertados</h3>
+            <h2>Estudos indicam redução de massa cerebral por uso excessivo de tela</h2>
             
-            <p>Ao analisar o momento atual da educação básica brasileira, percebe-se que há importantes desafios
-estruturais que exigem respostas urgentes e articuladas. No ensino superior, a paisagem é um pouco
-diferente.<br>
-Quem procura uma faculdade, encontra diversas opções, tanto na esfera pública quanto na privada.
-O acesso foi ampliado nas últimas décadas, impulsionado por políticas públicas como o Fies e o
-Prouni, que democratizaram o ingresso nas universidades.<br>
-"De fato, houve ampliação do acesso ao ensino superior. A modalidade EAD ajudou a levar o
-ensino superior a uma grande parte da população, seja por causa dos custos, porque a EAD é mais
-barata, seja porque permitia conciliar a educação com o trabalho", diz Cesar Callegari, sociólogo e
-presidente do Conselho Nacional de Educação.<br>
-<img src="Atualidades/att1.jpg" class="atualimagem">
-No entanto, a expansão veio acompanhada de novos desafios, principalmente relacionados à
-qualidade dos cursos ofertados.<br>
-"Infelizmente, diversos cursos oferecidos por instituições particulares não têm a qualidade
-necessária. Os alunos percebem isso, o que gera a evasão escolar, porque eles acham que o curso
-não proporciona instrumentos para que o estudante possa participar e fetivamente do mercado de
-trabalho", alerta Callegari.<br>
-Outro problema, para ele, é a formação de professores para a educação básica. A situação, diz, é a
-de um verdadeiro "apagão do magistério".<br>
-"Temos uma escassez brava em licenciaturas de matemática, química, física, geografia… Não
-temos professores suficientes. Tudo isso degrada a qualidade da educação oferecida", afirma.<br>
-Para Callegari, a valorização docente teria de ser encarada como um objetivo estratégico para o
-futuro do país. "O Brasil precisa fazer dois movimentos fundamentais na área da educação: o
-primeiro é valorizar os milhões de professores que militam na educaç ão básica. Precisam ser
-valorizados do ponto de vista do salário e da estrutura para que possam trabalhar. Além disso, temos
-de formar uma nova geração de professores no Brasil. Com cursos em período integral, bolsas de
-permanência, para que possam se dedicar exclusivamente à sua formação, e, depois, ingressar em
-uma carreira atrativa."<br>
-Já no ensino básico, uma vitória do país foi a implementação da Base Nacional Comum Curricular
-(BNCC), em 2017, segundo Beatriz Alquéres, gerente-executiva de advocacy do Instituto Ayrton
-Senna.<br>
-"Temos o dever de garantir o mínimo comum de aprendizado entre todas as regiões. É um direito
-de todas as crianças do país aprender um mínimo de matemática, de língua portuguesa ou de
-ciências", afirma.<br>
-Apesar dos avanços, persistem desigualdades regionais e sociais. Segundo Alquéres, essas
-desigualdades podem ser observadas em diferentes aspectos, tanto no resultado de aprendizagem
-(ao final do ensino médio), como na questão da trajetória escolar (nas ta xas de reprovação e de
-abandono escolar).<br>
-Além de olhar para a desigualdade entre os estados, é necessário apontar a vista para a desigualdade
-entre escolas de uma mesma cidade. "Há desigualdade até mesmo dentro de uma mesma escola",
-alerta Alquéres.<br>
-O Todos Pela Educação, por meio de seu departamento de comunicação, avalia que a desigualdade
-que historicamente persiste no país se reflete diretamente na educação.<br>
-Segundo o instituto, estudantes negros, indígenas e de baixa renda enfrentam contextos escolares
-mais desafiadores, em escolas que ainda carecem de investimentos estruturais e pedagógicos
-consistentes. As desigualdades étnico-raciais, em especial, têm impacto direto nos índices de
-permanência e conclusão escolar: jovens negros têm, em média, uma década de atraso no acesso
-ao ensino médio em comparação aos brancos. Essa desigualdade não é fruto de menor capacidade,
-mas da ausência histórica de políticas educacionais comprometidas com a equidade racial.
-A instituição destaca uma lista de desafios para que a qualidade da educação no Brasil continue
-avançando.<br>
-Entre esses desafios estão: enfrentar essas desigualdades de forma sistêmica e assegurar que a
-equidade étnico-racial esteja no centro das políticas públicas; investir na primeira infância;
-implementar uma política de alfabetização efetiva, garantindo que todas as crianças aprendam a ler
-e a escrever na idade certa; qualificar a formação inicial e continuada de professores; fortalecer a
-governança educacional, com melhor articulação entre União, estados e municípios; e expandir a
-escola em tempo integral, uma das formas mais eficazes de reduzir desigualdades e melhorar os
-resultados de aprendizagem.
+            <p>Consumo compulsivo de conteúdos de baixa qualidade está associado a redução no volume de massa cinzenta em regiões do cérebro responsáveis por tomada de decisões, apontam estudos.<br><br>
+                Embora possa parecer exagerado à primeira vista, o termo "cérebro podre" ou "podridão cerebral", da expressão em inglês "brain rot", pode ser mais literal do que pensamos. Eleita a palavra do ano de 2024 pelo Dicionário Oxford por mais de 37 mil pessoas, o termo descreve, de acordo com a Oxford University Press, a deterioração mental causada pelo consumo excessivo de conteúdo superficial, especialmente na internet. As citações ao termo em inglês aumentaram 230% entre 2023 e 2024, refletindo uma preocupação social crescente com esse fenômeno.<br>
+                Assim, o que começou como uma expressão coloquial encontrou apoio na ciência. Pesquisas citadas pelo jornal britânico The Guardian indicam que o uso excessivo de mídias sociais e o consumo compulsivo de conteúdo de baixa qualidade – como notícias sensacionalistas, teorias da conspiração e entretenimento vazio – podem literalmente encolher a massa cinzenta, diminuir a capacidade de atenção e enfraquecer a memória. Uma combinação de efeitos que faz com que o termo "podridão" não pareça exagerado.<br><br>
+                <h3>Do e-mail à rolagem infinita</h3><br>
+                Os primeiros sinais de alarme soaram no início do século com algo que hoje nos parece inofensivo: o e-mail. Como o jornal El País noticiou recentemente, citando um artigo do Guardian de 2005, uma equipe da Universidade de Londres, após 80 testes clínicos, descobriu que o uso diário de e-mail e telefone celular causava uma queda média de dez pontos no QI dos participantes, um impacto que eles descreveram como mais prejudicial do que o uso de maconha.<br>
+                Imagine então o que acontece agora com a constante enxurrada de tweets, stories, reels, notificações, pushes e fluxos intermináveis de conteúdo.<br>
+                Os aplicativos modernos são projetados especificamente para nos manter viciados, aproveitando o que Michoel Moshel, pesquisador da Universidade Macquarie, descreveu ao El País como "a tendência natural do nosso cérebro de buscar novidades, especialmente quando se trata de informações potencialmente prejudiciais ou alarmantes, uma característica que já nos ajudou a sobreviver".<br><br>
+                <h3>Mudanças cerebrais preoculpantes</h3><br>
+                Em geral, o quadro atual é preocupante. Uma meta-análise de 27 estudos de neuroimagem revelou que o uso excessivo de internet está associado a uma redução no volume de massa cinzenta em regiões críticas do cérebro responsáveis pelo processamento de recompensas, controle de impulsos e tomada de decisões. De acordo com Moshel, essas alterações são semelhantes às observadas em casos de dependência de substâncias como metanfetaminas e álcool.<br>
+                Além do ambiente clínico, o "uso desordenado de tela" tem sido estudado em ambientes educacionais. Uma meta-análise citada em um artigo do The Conversation, do qual Moshel é um dos autores, lista 34 estudos que vinculam o uso compulsivo a um desempenho cognitivo significativamente inferior, especialmente no que diz respeito a atenção sustentada e controle de impulsos. O problema, de acordo com o relatório, não se limita aos mais jovens; ele também afeta adultos que passam muitas horas na frente de celulares e computadores.<br>
+                <strong>Ainda assim, o problema é particularmente grave entre os jovens. De acordo com dados de 2021 da ONG americana Common Sense Media citados no The Conversation, pré-adolescentes passam 5 horas e 33 minutos por dia em frente às telas, enquanto esse tempo é de 8 horas e 39 minutos para adolescentes.</strong><br>
+                Na Austrália, por exemplo, uma pesquisa realizada em 2020 pelo Instituto Gonski da UNSW revelou que 84% dos educadores consideram tecnologias digitais uma distração na sala de aula. De acordo com uma pesquisa da organização australiana especializada em saúde mental Beyond Blue, citada pela emissora americana ABC, o tempo excessivo de tela está entre os principais desafios para os jovens, perdendo apenas para problemas de saúde mental.<br>
+                <h3>Ciírculo vicioso da era digital</h3><br>
+                Eduardo Fernández Jiménez, psicólogo clínico do Hospital La Paz, em Madri, explicou ao El País que o cérebro ativa diferentes redes neurais para gerenciar diferentes tipos de atenção. O bombardeio constante de estímulos variáveis afeta particularmente nossa capacidade de atenção sustentada, que é fundamental para o aprendizado acadêmico.<br>
+                O problema é agravado por um círculo vicioso difícil de romper: de acordo com um estudo publicado na revista Nature, pessoas com saúde mental debilitada têm maior probabilidade de consumir conteúdo de baixa qualidade, o que, por sua vez, piora seus sintomas. E quanto mais tempo se passa em frente à tela, mais difícil é reconhecer e limitar o problema.<br>
+                <h3>Existe uma solução?</h3><br>
+                Especialistas recomendam uma abordagem em duas frentes: qualidade e quantidade. É fundamental estabelecer limites claros para o tempo de tela e fazer um esforço consciente para se desligar. Atividades que exigem presença física, como esportes ou reuniões com amigos, são essenciais para neutralizar os efeitos negativos do uso prolongado da tela, recomendou o psicólogo Carlos Losada em dezembro ao El País.<br>
+                Também é importante dar prioridade a conteúdos educativos que evitem características viciantes e estabelecer intervalos regulares. Porque, como sugere a pesquisa, o "cérebro podre" pode ser mais do que uma metáfora, mas um processo real de deterioração cognitiva causada por nossos hábitos digitais.<br>
+                Com as empresas de tecnologia projetando algoritmos para maximizar nosso tempo de tela e um público cada vez mais digitalizado, o desafio vai além do indivíduo. É preciso políticas públicas que incentivem a transparência e a educação digital crítica.<br>
+                A ironia é que essa "podridão cerebral" pode estar alterando a forma como percebemos e respondemos ao mundo justamente quando mais precisamos de nossas capacidades cognitivas. Talvez seja hora de lembrar que existe um mundo além da tela, um mundo que nossos cérebros foram realmente projetados para explorar.<br>
             </p>
         </div>
     </div>
