--- a/index.html
+++ b/index.html
@@ -198,6 +198,18 @@
                                             </div>
                                         </div>
                                     </div>
+
+                                    <div class="card mb-3">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Atividade avaliativa</h5>
+                                            <h6 class="card-subtitle mb-2 text-muted">Matéria: Sociologia</h6>
+                                            <p class="card-text">Composição do dossiê sobre o filme "O menino que descobriu o vento".</p>
+                                            <div class="d-flex justify-content-between">
+                                                <span class="badge bg-info">Dossiê</span>
+                                                <span class="badge bg-danger">Entrega: 09/06</span>
+                                            </div>
+                                        </div>
+                                    </div>
                                     
                                     
                                 </div>
@@ -305,7 +317,10 @@
                                                 <strong>Páginas:</strong> 28-34 e 40-41
                                             </li>
                                             <li class="list-group-item">
-                                                <strong>Observações:</strong> Estudar pelo caderno e pela leitura da parte teórica no livro
+                                                <strong>Questões da lista 1: 11, 12, 14, 15, 92581200, 92581203, 34, 37, 49, 50, 58, 83.</strong> 
+                                            </li>
+                                            <li class="list-group-item">
+                                                <strong>Questões da lista 2: 2, 3, 7, 11, 16, 22, 23, 30.</strong> 
                                             </li>
                                         </ul>
                                     </div>
