--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Ciclo Trigonométrico</h5>
                                             <h6 class="card-subtitle mb-2 text-muted">Matéria: Arte de morar</h6>
-                                            <p class="card-text">Construção de um ciclo trigonométrico supervisionado pela professora Thaiane.</p>
+                                            <p class="card-text">Construção de um ciclo trigonométrico supervisionado pela professora Taiane.</p>
                                             <div class="d-flex justify-content-between">
                                                 <span class="badge bg-info">Projeto Prático</span>
                                                 <span class="badge bg-danger">Confecção: 13/05</span>
@@ -358,7 +358,7 @@
                                             </li>
                                         </ul>
                                         
-                                        <h6 class="text-primary">Física:</h6>
+                                        <h6 class="text-primary">Química:</h6>
                                         <ul class="list-group list-group-flush">
                                             <li class="list-group-item">
                                                 <strong>Livro X:</strong> Formação Geral Básica
@@ -516,7 +516,7 @@
                                     </div>
                                     <p class="mb-1">Durante a primeira aula do itinerário fomos recebidos com a surpresa de que a professora Luciana Leite sairia do colégio e tiramos uma foto juntos para representar todo nosso tempo juntos. Sentiremos sua falta pró </p>
                                     <img src="Notícias/desp.jpg" alt="Despedida a Luciana" class="imgnot"><br>
-                                    <small class="text-primary">Prof. Thaiane</small>
+                                    <small class="text-primary">Prof. Taiane</small>
                                 </div>
                                 
                                 <div class="list-group-item">
